fixed scrollbar color

--- a/global.css
+++ b/global.css
@@ -4,6 +4,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: white;
+    background: #333;
     border-radius: 2.5px;
 }
